--- a/dropbox-flexbox-master/index.html
+++ b/dropbox-flexbox-master/index.html
@@ -9,8 +9,8 @@
     <link href="./assets/images/favicon.png" rel="shortcut icon">
 </head>
 <body>
-    <header class="fundo-do-cabeçalho">
-        <nav class="cabeçalho">
+    <header class="fundo-do-cabecalho">
+        <nav class="cabecalho">
             <div class="logos">
                 <img class="logo-1" src="https://cfl.dropboxstatic.com/static/images/index/rebrand/logos/glyphs/glyph_french_vanilla.svg">
                 <img class="logo-2" src="https://cfl.dropboxstatic.com/static/images/index/rebrand/logos/wordmarks/wordmark_white.svg">
@@ -43,8 +43,8 @@
             <img src="./assets/images/image.png" alt="image" class="image">
         </div>
     </section>
-    <section class="maçante-background">
-        <div class="maçante">
+    <section class="macante-background">
+        <div class="macante">
             <div class="div-image">
                 <img src="https://cfl.dropboxstatic.com/static/images/index/zeus/home-hero-vflMv-jgR.jpg" alt="img">
             </div>
@@ -61,7 +61,7 @@
             <div class="saiba-mais-texto">
                 <h2>Saiba mais sobre os benefícios do Dropbox</h2>
             </div>
-            <div class="botão-recursos">
+            <div class="botao-recursos">
                 <a href="">Ver recursos</a>
             </div>
         </div>
@@ -81,8 +81,8 @@
             </div>
         </div>
     </section>
-    <footer class="fundo-do-rodapé">
-        <nav class="rodapé">
+    <footer class="fundo-do-rodape">
+        <nav class="rodape">
             <div class="listas">
                 <div class="lista-1">
                     <h3>Dropbox</h3>
@@ -133,7 +133,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="linguagem-e-país">
+            <div class="linguagem-e-pais">
                 <a href="">Português (Brasil)</a>
             </div>
         </nav>
